<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RateTheInstructor</string>
    <string name="action_settings">Settings</string>
    <string name="contact_details">CONTACT DETAILS</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Office_name">Office</string>
    <string name="phone_name">Phone</string>
    <string name="email_name">Email</string>
    <string name="average_rating">Average Rating</string>
    <string name="total_rating">Total Ratings</string>
    <string name="comments_heading">COMMENTS</string>
    <string name="comments_feedback">Comments</string>
    <string name="rating_heading">RATING</string>
    <string name="title_activity_instructor_details">Instructor Details</string>
    <string name="title_activity_instructor_list">Instructors</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_post_feedback">Write A Review</string>
    <string name="choose_rating">Choose A Rating</string>
    <string name="empty">Sorry, No Data available. Please connect to network and try again</string>
    <string name="offline">App is in offline mode</string>
    <string name="loading">Loading…</string>
    <string name="posting">Posting…</string>
    <string name="progress_message">Please Wait</string>
    <string name="offline_message">You are not connected to Internet. Please connect and retry</string>
    <string name="post">Send</string>
    <string name="post_Status">Feedback posted</string>
    <string name="feedback_error">Please give a rating or a comment</string>
    <string name="alert_title">Network Error</string>
    <string name="alert_positive_title">OK</string>

</resources>
