<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="25dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_marginBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_rating"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_below="@+id/textView"
        android:numStars="5"
        android:stepSize="1"
        android:focusableInTouchMode="false"
        android:focusable="false"

        />

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_feedback"
        android:id="@+id/textView2"
        android:layout_below="@+id/ratingBar"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="10dp">
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/comments"
        android:scrollbars="vertical"
        android:layout_weight="0.7"
        android:singleLine="false"
        android:scrollHorizontally="false"
        android:lines="1"
        android:maxLines="5"
        android:gravity="top|left">
        <requestFocus />
        </EditText>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:id="@+id/postButton"
        android:layout_weight="0.3"
        android:layout_gravity="center"
         />
    </LinearLayout>

</RelativeLayout>
