<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/nameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="2dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_details"
        android:id="@+id/contactDetails"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:textColor="#33B5E5"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33B5E5"
        android:layout_below="@+id/contactDetails"
        android:id="@+id/view1"
        android:padding="0dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:id="@+id/officeLabel"
        android:text="@string/Office_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructorOffice"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/officeLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_name"
        android:id="@+id/phoneLabel"
        android:layout_below="@+id/officeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructorPhone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/phoneLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_name"
        android:id="@+id/emailLabel"
        android:layout_below="@+id/phoneLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructorEmail"
        android:layout_alignBottom="@+id/emailLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rating_heading"
        android:id="@+id/ratingHeading"
        android:layout_below="@+id/emailLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:textColor="#33B5E5"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33B5E5"
        android:layout_below="@+id/ratingHeading"
        android:id="@+id/view2"
        android:padding="0dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructorAvgRating"
        android:layout_below="@+id/view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="?android:attr/textAppearanceLarge"
        android:text="@string/average_rating"
        android:layout_marginTop="5dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingValue"
        android:layout_below="@+id/view2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_alignBottom="@+id/instructorAvgRating"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_rating"
        android:id="@+id/totalRatingsLabel"
        android:layout_below="@+id/instructorAvgRating"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructorTotalRatings"
        android:layout_below="@+id/ratingValue"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/totalRatingsLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="5dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/comments_heading"
        android:id="@+id/commentsHeading"
        android:layout_below="@+id/totalRatingsLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:textColor="#33B5E5"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33B5E5"
        android:layout_below="@+id/commentsHeading"
        android:id="@+id/view3"
        />

</RelativeLayout>
